--- a/web-gui/src/app/dialogs/task-points-dialog/task-points-dialog.component.html
+++ b/web-gui/src/app/dialogs/task-points-dialog/task-points-dialog.component.html
@@ -5,7 +5,7 @@
       cdkDropList
       #taskList="cdkDropList"
       [cdkDropListData]="tasks"
-      [cdkDropListConnectedTo]="[critList]"
+      [cdkDropListConnectedTo]="[dropzone]"
       class="example-list"
       (cdkDropListDropped)="drop($event)"
       [cdkDropListEnterPredicate]="noReturnPredicate">
@@ -14,16 +14,8 @@
   </div>
 
   <div class="example-container">
-    <mat-tab-group>
-      <mat-tab label="First"> <!-- *ngFor="let tab of tabs; let index = index" [label]="tab" -->
-        <div
-          cdkDropList
-          #critList="cdkDropList"
-          [cdkDropListData]="addedTasks"
-          [cdkDropListConnectedTo]="[taskList]"
-          class="example-list"
-          (cdkDropListDropped)="drop($event)">
-       <div class="example-box" *ngFor="let task of addedTasks" cdkDrag>{{ task.name }}</div>
+    <mat-tab-group (selectedIndexChange)="changeIndex($event)">
+      <mat-tab *ngFor="let element of allRequirements; let i = index" [label]="'Kategorie '+ (i+1)">
        <mat-list class="pointInputList">
         <mat-list-item>
           <mat-form-field>
@@ -36,7 +28,6 @@
           </mat-form-field>
         </mat-list-item>
       </mat-list>
-    </div>
       </mat-tab>
       <mat-tab disabled>
         <ng-template mat-tab-label class="create-course">
@@ -44,46 +35,14 @@
         </ng-template>
       </mat-tab>
     </mat-tab-group>
-  </div>
-
-  <div class="flexBox">
-    <div class="taskBox">
     <div
-      id="allTasks"
+      #dropzone = "cdkDropList"
       cdkDropList
-      [cdkDropListData]="tasks"
-      cdkDropListConnectedTo="addedTasks"
+      [cdkDropListData]="selected.tasks"
+      [cdkDropListConnectedTo]="[taskList]"
       class="example-list"
-      (cdkDragDropListDropped)="drop($event)"
-      [cdkDropListEnterPredicate]="noReturnPredicate"> <!-- cdkDragDropListDrooped?? -->
-      <div
-        class="example-box"
-        *ngFor="let task of tasks"
-        [cdkDragData]="task"
-        cdkDrag>{{task.name}}</div>
-    </div>
-<!--    <mat-card *ngFor="let task of tasks" class="task-container" id="{{task.id}}">-->
-<!--      <span>{{task.name}}</span>-->
-<!--    </mat-card>-->
-    </div>
-    <div class="criteriaBox">
-      <mat-tab-group>
-        <mat-tab>
-            <div
-              id="addedTasks"
-              cdkDropList
-              [cdkDropListData]="addedTasks"
-              cdkDropListConnectedTo="allTasks"
-              class="example-list"
-              (cdkDropListDropped)="drop($event)">
-              <div
-                class="example-box"
-                *ngFor="let task of addedTasks"
-                cdkDrag
-                [cdkDragData]="task">{{task.name}}</div>
-            </div>
-        </mat-tab>
-      </mat-tab-group>
+      (cdkDropListDropped)="drop($event)">
+      <div class="example-box" *ngFor="let task of selected.tasks" cdkDrag>{{ task.name }}</div>
     </div>
   </div>
 </div>
