--- a/web-gui/src/app/dialogs/task-points-dialog/task-points-dialog.component.scss
+++ b/web-gui/src/app/dialogs/task-points-dialog/task-points-dialog.component.scss
@@ -1,43 +1,35 @@
-.flexBox {
-  display: flex;
-  flex-direction: row;
-}
-
-.taskBox {
-  width: 35rem;
-  margin-right: 1rem;
+.flex-container {
   display: flex;
   flex-flow: row wrap;
+  justify-content: space-evenly;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
 
-  .task-container {
-    width: 28%;
+.flex-item {
+  padding: 1rem;
+  width: 40%;
+  height: 500px;
+  margin-top: 2rem;
+
+  .task-list {
+    overflow: -moz-scrollbars-vertical;
+    border: dashed 2px #ccc;
+    min-height: 50px;
+    max-height: 100%;
+    background: white;
+    border-radius: 4px;
+    display: block;
   }
 }
 
-.criteriaBox {
-
-}
-
-.example-container {
-  width: 400px;
-  max-width: 100%;
-  margin: 0 25px 25px 0;
-  display: inline-block;
-  vertical-align: top;
-}
-
-.example-list {
-  border: solid 1px #ccc;
-  min-height: 100px;
-  background: white;
-  border-radius: 4px;
+.pointInputList {
   overflow: hidden;
-  display: block;
 }
 
 .example-box {
   padding: 20px 10px;
-  border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
   flex-direction: row;
@@ -46,6 +38,16 @@
   box-sizing: border-box;
   cursor: move;
   background: white;
+  font-size: 14px;
+  min-width: 10rem;
+}
+
+.toggle-box {
+  padding: 20px 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   font-size: 14px;
 }
 
@@ -77,9 +79,3 @@ input {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-button .mat-tab-labels :last-child.mat-tab-label {
-  min-width: 0;
-  padding: 0 12px;
-  color: unset;
-  opacity: unset;
-}
