--- a/web-gui/src/app/dialogs/task-points-dialog/task-points-dialog.component.html
+++ b/web-gui/src/app/dialogs/task-points-dialog/task-points-dialog.component.html
@@ -16,17 +16,19 @@
   </div>
 
   <div class="flex-item">
-    <mat-tab-group (selectedIndexChange)="changeIndex($event)">
+    <mat-tab-group (selectedIndexChange)="changeIndex($event)"
+                   [selectedIndex]="index">
       <mat-tab *ngFor="let element of allRequirements; let i = index" [label]="'Kategorie '+ (i+1)">
        <mat-list class="pointInputList">
         <mat-list-item>
           <mat-form-field>
-            <input class="" type="text" placeholder="Punkte zum Bestehen" matInput formControlName="pointsToPass" required>
+            <input class="" type="number" placeholder="Punkte zum Bestehen" matInput required [(ngModel)]="element.toPass">
           </mat-form-field>
         </mat-list-item>
         <mat-list-item>
           <mat-form-field>
-            <input class="" type="text" placeholder="Bonus Formel" matInput formControlName="bonusFormel">
+            <input class="" type="text" [(ngModel)]="element.bonusFormula" (keyup)="checkFormula(element.bonusFormula)" placeholder="Bonus Formel" matInput>
+            <mat-hint [hidden]="valid">Scenario name should have at least 3 symbols</mat-hint>
           </mat-form-field>
         </mat-list-item>
       </mat-list>
