--- a/web-gui/src/app/dialogs/task-points-dialog/task-points-dialog.component.scss
+++ b/web-gui/src/app/dialogs/task-points-dialog/task-points-dialog.component.scss
@@ -88,3 +88,11 @@ input {
   float: right;
 }
 
+.mat-btn-element {
+  margin-top: 3vh;
+  padding: 0;
+  color: #f44336;
+  background-color: inherit;
+  align-items: center;
+}
+
