--- a/web-gui/src/app/dialogs/task-points-dialog/task-points-dialog.component.html
+++ b/web-gui/src/app/dialogs/task-points-dialog/task-points-dialog.component.html
@@ -1,14 +1,14 @@
 <div class="dialog-content">
   <div id="task-points-title" matDialogTitle>Punkte vergeben</div>
   <div matDialogContent class="flex-container">
-    <div class="flex-item">
+    <div class="flex-item task-box">
       <mat-checkbox [(ngModel)]="checked"
                     (ngModelChange)="updateAllComplete()"
                     [labelPosition]="labelPosition">
         Alle markieren
       </mat-checkbox>
       <div class="scroll-box">
-        <div class="task-list" *ngFor="let task of tasks">
+        <div class="task-item" *ngFor="let task of tasks">
           <mat-card class="card">
             <span>{{task.name}}</span>
           </mat-card>
@@ -16,7 +16,7 @@
       </div>
     </div>
 
-    <div class="flex-item">
+    <div class="flex-item category-box">
       <mat-tab-group (selectedIndexChange)="changeIndex($event)"
                      [selectedIndex]="index">
         <mat-tab *ngFor="let element of allRequirements; let i = index" [label]="'Kategorie '+ (i+1)">
@@ -31,11 +31,13 @@
               <input type="text" [(ngModel)]="element.bonusFormula" (keyup)="checkFormula(element.bonusFormula)" placeholder="Bonusformel" matInput>
               <mat-hint [hidden]="valid">Bonusformel muss aus mindestens 3 Zeichen bestehen</mat-hint>
             </mat-form-field>
+            <mat-icon class="bonus-formula-info" matTooltip="Tooooooltip">help</mat-icon>
           </mat-list-item>
-           <mat-list-item>
-             <button class="mat-btn-element" mat-flat-button color="warn" (click)="delete(element)">
-               Kategorie {{ i+1 }} löschen</button >
-           </mat-list-item>
+           <div class="delete-icon">
+             <button class="mat-btn-element" mat-flat-button (click)="delete(element)" matTooltip="Kategorie {{ i+1 }} löschen">
+               <mat-icon color="warn">delete</mat-icon>
+             </button>
+           </div>
         </mat-list>
         </mat-tab>
         <mat-tab disabled>
@@ -44,14 +46,14 @@
           </ng-template>
         </mat-tab>
       </mat-tab-group>
-      <div class="toggle-box">
-        <mat-slide-toggle [(ngModel)]="hidePoints" [color]="toggleColor" (change)="toggleChange()">Punkte verbergen</mat-slide-toggle>
-      </div>
     </div>
   </div>
   <div class="spacer"></div>
 
   <div mat-dialog-actions class="actions">
+    <div class="toggle-box">
+      <mat-slide-toggle [(ngModel)]="hidePoints" [color]="toggleColor" (change)="toggleChange()">Punkte verbergen</mat-slide-toggle>
+    </div>
     <button mat-flat-button color="warn" (click)="closeDialog()">Abbrechen</button>
     <button mat-flat-button  color="accent" (click)="save()">Erstellen</button>
   </div>
