--- a/web-gui/src/app/page-components/course-detail/course-detail.component.scss
+++ b/web-gui/src/app/page-components/course-detail/course-detail.component.scss
@@ -50,6 +50,7 @@
     justify-content: center;
     .mat-icon {
       height: 25px;
+      color: #333333;
     }
   }
   span {
@@ -58,6 +59,7 @@
   }
   .mat-icon {
     cursor: pointer;
+    color: #333333;
   }
 }
 
